Fix menu overlap that renders links behind it un-clickable - Apply `height: 100%;` and `width: 100%` to `#dl-menu` only when open - Close #161

--- a/_sass/_dl-menu.scss
+++ b/_sass/_dl-menu.scss
@@ -3,8 +3,6 @@
    ========================================================================== */
 
 .dl-menuwrapper {
-	width: 100%;
-	height: 100%;
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -21,6 +19,11 @@
 		max-width: 175px;
 		top: 25px;
 		left: 25px;
+	}
+
+	&.dl-menuopen {
+		width: 100%;
+		height: 100%;
 	}
 
 	button {
